--- a/src/Components/TitleText/TitleText.css
+++ b/src/Components/TitleText/TitleText.css
@@ -45,13 +45,14 @@
   .text-service{
 padding: 0;
 margin: 0;
+max-width: 996px;
   font-family: 'Barlow regular';
     font-size: 18px;
     font-weight: 400;
     line-height: 24px;
 }
 
-@media screen and (max-width:1920px){  
+@media screen and (max-width:1440px){  
   .title-text-container{
     padding: 100px 0;
     margin: 0 80px;
@@ -67,7 +68,7 @@ margin: 0;
       padding:0 ;
       line-height: 24px;
       margin: 0;
-    
+      max-width: 780px;
   }
   .title-text-container{
   height: 188px; 
@@ -90,6 +91,7 @@ margin: 0;
     
   }
   .title-text-container{
-  height: 188px; 
+  min-height: fit-content; 
+
 
 }}
