--- a/src/Components/Container/Container.css
+++ b/src/Components/Container/Container.css
@@ -2,6 +2,7 @@
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
+    background-color:#1A1A1A ;
 }
 @media screen and (max-width:1440px) {
     .RB_container{
