--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,7 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+   box-sizing: border-box;
+}
+.RB_DashboardContainer{
+    background-color: #1A1A1A;
+}
+.RB_One{
+    display: flex;
+    align-items: flex-start;
 }
 .RB_form{
     margin: 30px auto 10px;
@@ -13,6 +20,7 @@
     margin-bottom: 10px;
 }
 .RB_form input{
+    background-color: #1A1A1A;
     padding: 20px;
     margin-bottom: 20px;
     display: block;
