--- a/src/Components/ProjectCard/ProjectCard.css
+++ b/src/Components/ProjectCard/ProjectCard.css
@@ -15,12 +15,11 @@
 .project-card {
     background: var(--color-card-bg);
     padding: 2rem;
-    border: 1px solid var(--color-border);
     height: 100%;
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(133, 214, 4, 0.753);
+    border: 1px solid rgb(80, 79, 79);
     box-sizing: border-box;
 }
 
@@ -48,6 +47,7 @@
 }
 
 .project-link {
+    position: relative;
     text-decoration: none;
     display: inline-flex;
     align-items: center;
@@ -59,6 +59,18 @@
     background: var(--color-hover);
     border-radius: 8px;
     max-width: max-content;
+    transition: all 0.3s ease;
+    gap: 8px;
+}
+
+.arrow-icon {
+    width: 54px;
+    height: 54px;
+    transition: transform 0.2s ease;
+}
+
+.project-link:hover .arrow-icon {
+    transform: translate(2px, -2px);
 }
 
 .project-description {
@@ -74,30 +86,30 @@
         gap: 1.5rem;
         padding: 1.5rem;
     }
-    
+
     .project-card {
         padding: 1.5rem;
     }
-    
+
     .project-content h3 {
         font-size: 22px;
     }
-    
+
     .project-description {
         font-size: 17px;
         margin-bottom: 80px;
     }
-    
+
     .subtitle-above-image h4 {
         font-size: 24px;
         margin-bottom: 30px;
     }
-    
+
     .project-link {
         font-size: 18px;
         margin-bottom: 25px;
     }
-    
+
     .project-image {
         height: 180px;
     }
@@ -108,33 +120,32 @@
         padding: 1.2rem;
         gap: 1.2rem;
     }
-    
+
     .project-card {
         padding: 1.2rem;
     }
-    
+
     .project-content h3 {
         font-size: 20px;
     }
-    
+
     .project-description {
         font-size: 16px;
         margin-bottom: 70px;
     }
-    
+
     .subtitle-above-image h4 {
         font-size: 22px;
         margin-bottom: 25px;
     }
-    
+
     .project-link {
         font-size: 16px;
         padding: 8px 12px;
         margin-bottom: 20px;
     }
-    
+
     .project-image {
         height: 160px;
     }
 }
-/*  */
