--- a/src/Components/CardHome/CardHome.css
+++ b/src/Components/CardHome/CardHome.css
@@ -14,15 +14,14 @@
 
 .card {
     background-color: var(--color-bg);
-    padding: 30px;
-    border-radius: 12px;
+    padding: 60px;
     border: 1px solid rgb(80, 79, 79);
     transition: all 0.3s ease;
 }
 
 .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(182, 255, 25, 0.2);
+    box-shadow: 0 6px 12px var(--color-accent);
 }
 
 .card-header {
@@ -33,30 +32,18 @@
 }
 
 .card h3 {
-    margin: 0;
+    font-size: 26px;
 }
 
 .card p {
     font-size: 20px;
     color: var(--color-logoText);
     padding-bottom: 40px;
+    line-height: 150%;
+    margin-top: 40px;
 }
 
 .card-actions {
     display: flex;
     justify-content: space-between;
-}
-
-.card-actions button {
-    background-color: var(--color-accent);
-    color: var(--color-bg);
-    border: none;
-    padding: 0.5rem 1.2rem;
-    font-weight: 500;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.card-actions button:hover {
-    background-color:var(--color-Nomber);
 }
