--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -19,6 +19,10 @@ body,
 }
 
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 3;
     display: flex;
     align-items: center;
     justify-content: space-between;
