--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -38,3 +38,13 @@
 .RB_form input:focus{
     border-color: #9EFF00;
 }
+.RB_UsersButton{
+    text-decoration: none;
+    color: black;
+    background-color: #9EFF00;
+    margin: 20px auto;
+    padding: 10px 20px;
+    border-radius: 6px;
+    display: block;
+    width: fit-content;
+}
