--- a/src/Components/CardHome/CardHomeOK.css
+++ b/src/Components/CardHome/CardHomeOK.css
@@ -1,11 +1,10 @@
 :root {
-    --secondary-backgroundcolor: #1A1A1A;
+    --primary-backgroundcolor: #1A1A1A;
     --secondary-backgroundcolor: #262626;
     --rarely-backgroundcolor: #333333;
     --primary-color: #9EFF00;
     --secondary-color: #D8FF99;
     --writing-color: #98989A;
-    --writing-color-secondary: #98989A;
     --writing-color-rarely: #FDFFFA;
     --writing-color-titles: #FFFFFF;
     --paragraph-color: #E6E6E6;
@@ -32,6 +31,7 @@
 
 .card h3 {
     font-size: 26px;
+    color: var(--writing-color-titles);
 }
 
 .card p {
