--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,11 +1,12 @@
 :root {
-    --secondary-backgroundcolor: #1A1A1A;
+    --primary-backgroundcolor: #1A1A1A;
     --secondary-backgroundcolor: #262626;
     --rarely-backgroundcolor: #333333;
     --primary-color: #9EFF00;
     --secondary-color: #D8FF99;
     --writing-color: #98989A;
-    --writing-color-secondary: #98989A;
+    /*     --writing-color-secondary: #98989A;
+ */
     --writing-color-rarely: #FDFFFA;
     --writing-color-titles: #FFFFFF;
     --paragraph-color: #E6E6E6;
@@ -22,7 +23,7 @@ body,
 #root {
     height: 100%;
     width: 100%;
-    background-color: var(--secondary-backgroundcolor);
+    background-color: var(--primary-backgroundcolor);
     font-family: sans-serif;
 }
 
@@ -71,12 +72,15 @@ body,
     font-size: 18px;
     border-radius: 8px;
     transition: background-color 0.3s ease;
+
 }
 
 .nav-link:hover,
 .nav-link:focus {
     background-color: var(--writing-color-secondary);
     color: var(--primary-color);
+    padding: 14px;
+    transition: all 0.5s ease;
     font-weight: 600;
 }
 
