--- a/src/Components/ProjectCard/ProjectCard.css
+++ b/src/Components/ProjectCard/ProjectCard.css
@@ -124,7 +124,7 @@
     margin-bottom: 10px;
     font-size: 18px;
 }
-/* 
+
 @media screen and (max-width: 1440px) {
     .subtitle-above-image {
         padding: 0 40px;
@@ -198,4 +198,4 @@
     .project-image {
         margin: 20px 0;
     }
-} */
+} 
