--- a/src/Components/CardHome/CardHomeOK.css
+++ b/src/Components/CardHome/CardHomeOK.css
@@ -15,6 +15,21 @@
     padding: 60px;
     border: 1px solid rgb(80, 79, 79);
     transition: all 0.3s ease;
+    overflow: hidden;
+    position: relative;
+}
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(153, 243, 8, 0.32), transparent);
+    transition: left 0.6s ease;
+}
+.card:hover::before {
+    left: 100%;
 }
 
 .card:hover {
