--- a/src/Pages/MainWork/MainWork.css
+++ b/src/Pages/MainWork/MainWork.css
@@ -1,22 +1,3 @@
-:root {
-    --color-bg: #262626;
-    --color-text: #ffffff;
-    --color-accent: #B6FF19;
-    --color-hover: #333333;
-    --color-TrustedText: #FDFFFA;
-    --color-logoText: #E6E6E6;
-    /*  هي لون الكتابة يلي جنب الايوقنات*/
-    --color-Nomber: #D8FF99;
-    /* لون الارقام */
-    --color-copy: #98989A;
-    /* حقوق النشر */
-}
-
-@font-face {
-    font-family: barlow6;
-    src: url("/font/barlow/Barlow-SemiBold.ttf");
-}
-
 .work-container {
     margin: 0 auto;
     padding: 0 162px;
@@ -28,12 +9,12 @@
     font-size: 48px;
     margin-top: 120px;
     margin-bottom: 14px;
-    color: var(--color-text);
+    color: var(--writing-color-titles);
 }
 
 .intro-text {
     font-size: 18px;
-    color: var(--color-logoText);
+    color: var(--paragraph-color);
     margin-bottom: 50px;
 }
 
@@ -42,8 +23,8 @@
     padding: 14px 12px;
     font-size: 22px;
     font-weight: normal;
-    color: var(--color-text);
-    background: var(--color-hover);
+    color: var(--writing-color-titles);
+    background: var(--rarely-backgroundcolor);
     border-radius: 8px;
     margin-bottom: 2rem;
 }
