--- a/src/Pages/Dash/Dash.css
+++ b/src/Pages/Dash/Dash.css
@@ -15,12 +15,12 @@
 }
 
 .dashboard{
-    /* padding: 120px 0; */
+   
     margin: 0 163px;
     border-top: 1px solid white;
     
 }
-nav {
+.DashNav {
   display: flex;
   gap: 15vw;     
   justify-content: center;
@@ -30,17 +30,17 @@ nav {
 }
 
 
-nav a {
+.DashNav a {
   color: white;  
-  text-decoration: none;  /* يشيل الخط تحت النص */
+  text-decoration: none;  
   font-size: 18px;
   font-family: "Barlow Semi Bold", sans-serif;
   transition: color 0.3s ease, transform 0.2s ease;
 }
 
-nav a:hover {
-  color: rgba(158, 255, 0, 1);        /* لون عند الهوفر */
-  transform: scale(1.05); /* تكبير بسيط */
+.DashNav a:hover {
+  color: rgba(158, 255, 0, 1);    
+  transform: scale(1.05);
 }
 
 
@@ -49,10 +49,10 @@ nav a:hover {
     /* padding: 100px 0; */
     margin: 0 80px;
   }
-  nav{
+  .DashNav{
     gap: 10vw;
 } 
-nav a{    
+.DashNav a{    
     font-size: 16px;
 }
 }
@@ -61,9 +61,9 @@ nav a{
  
     margin: 0 20px;
   }
-nav{
+.DashNav{
     gap: 5vw;
 } 
-nav a{    
+.DashNav a{    
     font-size: 14px;
 }}
