--- a/src/Components/ClientsAboutUs/ClientsAboutUs.css
+++ b/src/Components/ClientsAboutUs/ClientsAboutUs.css
@@ -4,14 +4,13 @@
   box-sizing: border-box;
   font-family: "Barlow", sans-serif;
 }
-.clients {
-  margin: 0 163px;
-}
+
 .slide-card {
   display: grid;
   grid-template-rows: 70% 30%;
   border: 1px solid rgb(80, 79, 79);
   padding: 100px 80px;
+  height: 100%;
 
   .titleClient {
     font-weight: 500;
