--- a/src/Components/Companies/Companies.css
+++ b/src/Components/Companies/Companies.css
@@ -1,7 +1,7 @@
 .companyName {
   display: flex;
   justify-content: space-between;
-  margin: 0px 163px;
+  /* margin: 0px 163px; */
 }
 
 .companyName .company {
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 1440px) {
   .companyName {
-    margin: 0px 80px;
+    /* margin: 0px 80px; */
   }
   .companyName .company {
     margin: 46px 0;
@@ -29,7 +29,7 @@
   .companyName {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 0px 16px;
+    /* margin: 0px 16px; */
 
     justify-content: center;
   }
