--- a/src/Components/Thanks/thanks.css
+++ b/src/Components/Thanks/thanks.css
@@ -1,68 +1,140 @@
 .Thank{
     position: relative;
-    background-image: url("/assets/img/dots.png");
-    background-repeat: repeat;
+    background-image: url('../../assets/imgs/Process/thank you.webp');
     background-position: bottom;
-    background-color: #262626;
-    height: 100%;
-    display: flex;
+  background-size: cover;
+      display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    z-index: -1;
+
+    }
+    .Thank::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: inherit;
+  z-index: -1;
+  filter: contrast(130%) brightness(16%) sepia(100%) hue-rotate(44deg) saturate(92%);
+  -webkit-filter: contrast(130%) brightness(16%) sepia(100%) hue-rotate(44deg) saturate(92%);
 }
-.logo{
+.thankDiv{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 120px 0;
+}
+.bglogothank{
     width: 80px;
+    height: 80px;
     padding: 16px;
     background-color: #9EFF00;
     border-radius: 15px;
-    margin-bottom: 50px;
-    margin-top: 120px;
-}
-.titel{
-    color: #FFFFFF;
-    max-width: 896px;
-    font-weight: 600;
-    font-size: 38px;
-    line-height: 100%; 
-    margin-bottom: 14px;
-}
-.discription{
-    color: #E6E6E6;
-    max-width: 896px;
-    font-size: 18px;
-    line-height: 150%;
-    margin-bottom: 50px;
-}
-.but_start{
-    position: relative;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
     z-index: 2;
-    width: 170px;
-    height: 63px;
-    margin-bottom: 120px;
-    color: #1A1A1A;
-    background-color: #9EFF00;
-    border-radius: 8px;
-    border: none;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 150%;
-    cursor: pointer;
+    img{
+        width: 42.66665267944336px;
+    }
 }
-.bg_thank{
-    position: absolute;
-    /* padding: 0 120px; */
-    opacity: 10%;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
+.thanksParagraph{
+    max-width: 896px;
 }
-@media screen and (max-width:1440px) {
-.logo{
+.thanksParagraph .title{
+        color:var(  --writing-color-titles);
+        max-width: 896px;
+        font-weight: 600;
+        font-size: 38px;
+        line-height: 100%; 
+        margin-bottom: 14px;
+        } 
+
+        .discription{
+            color: var(  --paragraph-color);
+            max-width: 896px;
+            font-size: 18px;
+            line-height: 150%;
+            margin-bottom: 50px;
+            }
+            .but_start{
+                position: relative;
+                z-index: 2;
+                width: 170px;
+                height: 63px;            
+                color:var( --primary-backgroundcolor);
+                background-color: #9EFF00;
+                border-radius: 8px;
+                border: none;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 150%;
+                cursor: pointer;
+                }
+          
+                @media screen and (max-width:1440px) {
+   
+                    .logo{
+                        width: 60px;
+                        padding: 12px 14px;
+                        margin-bottom: 40px;
+                        margin-top: 100px;
+                        } 
+                        .thanksParagraph{
+
+    padding: 0 80px;
+}
+.bglogothank{
     width: 60px;
-    padding: 12px 14px;
-    margin-bottom: 40px;
-    margin-top: 100px;
-}    
+    height:60px;
+    padding:12px 14px;
+ 
+    img{
+        width: 32px;
+    }
+    
+.thanksParagraph .title{
+
+        font-size: 30px;
+  
+        margin-bottom: 10px;
+        } 
+
+        .discription{
+        
+            font-size: 16px;
+            line-height: 150%;
+            margin-bottom: 40px;
+            }
+            .but_start{
+                position: relative;
+                z-index: 2;
+                width: 127px;
+                height: 49px;            
+       
+                font-size: 14px;
+         
+                }
+}
+                         }  
+                               @media screen and (max-width:992px) {
+   
+                    .logo{
+                        width: 60px;
+                        padding: 12px 14px;
+                        margin-bottom: 40px;
+                        margin-top: 100px;
+                        } 
+                        .thanksParagraph{
+
+    padding: 0 16px;
+}
+                         }  
+                        /* 
 .titel{
     font-size: 30px;
     margin-bottom: 10px;
@@ -99,4 +171,4 @@
     margin-bottom: 50px;
     font-size: 14px;
 }
-}
+} */
