--- a/src/Components/TableCrud/TableCrud.css
+++ b/src/Components/TableCrud/TableCrud.css
@@ -1,6 +1,6 @@
 .RB_Table{
     width: 60%;
-    margin:0 100px 0 auto;
+    margin: 10px auto;
     th{
         background-color: var(--primary-color);
         color: var(--primary-backgroundcolor);
