--- a/src/Pages/EditForm/EditForm.css
+++ b/src/Pages/EditForm/EditForm.css
@@ -1,6 +1,6 @@
 .RB_Form_Edit{
     margin: 10px auto;
-    width: 500px;
+    max-width: 500px;
 }
 .RB_Form_Edit h1{
     color: var(--primary-color);
