--- a/src/Pages/ProcessPage/ProcessPage.css
+++ b/src/Pages/ProcessPage/ProcessPage.css
@@ -1,5 +1,11 @@
 .RB_Flex{
     display: flex;
     gap: 20px;
-    margin: 100px;
+    overflow-x: auto;
+}
+@media screen and (max-width:992px){
+    .RB_Flex{
+        flex-direction: column;
+        align-items: center;
+    }
 }
