--- a/src/Components/Faq/Faq.css
+++ b/src/Components/Faq/Faq.css
@@ -105,6 +105,7 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  margin-bottom: 60px;
 }
 
 .show-more-btn,
@@ -160,6 +161,7 @@
     width: 28px;
     height: 28px;
   }
+
 }
 
 @media screen and (max-width: 992px) {
