--- a/src/Pages/EditService/EditService.css
+++ b/src/Pages/EditService/EditService.css
@@ -74,3 +74,7 @@
             font-size: 18px;
             padding-bottom: 8px;
               } 
+@media screen and (max-width: 992px) {
+.RS_FormEdit{
+    width: 100%;}
+}
