--- a/src/Components/CardHome/CardHome.css
+++ b/src/Components/CardHome/CardHome.css
@@ -1,6 +1,5 @@
+/* .card {
 
-.card {
-  
     padding: 60px;
     border: 1px solid rgb(80, 79, 79);
     transition: all 0.3s ease;
@@ -33,4 +32,4 @@
 .card-actions {
     display: flex;
     justify-content: space-between;
-}
+} */
