--- a/src/Components/ContactProject/ContactProject.css
+++ b/src/Components/ContactProject/ContactProject.css
@@ -61,10 +61,14 @@
                 border-radius: 8px;
             }
         }
-        button{
+        a{
+            text-decoration: none;
             width: 170px;
             height: 63px;
             flex-shrink: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             border-radius: 8px;
             font-size: 18px;
             font-family: barlow5;
@@ -112,7 +116,7 @@
                     margin-left: 14px;
                 }
             }
-            button{
+            a{
                 width: 119px;
                 height: 49px;
                 font-size: 14px;
@@ -148,7 +152,7 @@
                     text-align: center;
                 }
             }
-            button{
+            a{
                 width: 100%;
             }
         }
