--- a/src/Pages/Process/Process.css
+++ b/src/Pages/Process/Process.css
@@ -9,7 +9,8 @@
     border:none;
     padding: 10px 15px;
     border-radius: 6px;
-    margin: 20px auto;
+    margin: 100px auto 60px;
+
     display: block;
 }
 .RB_Process_Description{
