--- a/src/Components/Thanks/thanks.css
+++ b/src/Components/Thanks/thanks.css
@@ -8,6 +8,8 @@
   align-items: center;
   text-align: center;
   z-index: -1;
+    padding-bottom: 80px;
+
 }
 .logoAboutThank{
     box-shadow:  inset 0 0 27px var(--writing-color-titles);
@@ -35,7 +37,7 @@
   width: 80px;
   height: 80px;
   padding: 16px;
-  background-color: #9eff00;
+  background-color:  var(--primary-color);
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -67,21 +69,30 @@
   margin-bottom: 50px;
 }
 .but_start {
+ width: 170px;
+ height: 63px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-decoration: none;
+ color: var(--primary-backgroundcolor);
+ background-color: var(--primary-color);
+ border-radius: 8px;
+ border: none;
+ font-size: 18px;
+ font-weight: 500;
+ line-height: 150%;
+ cursor: pointer;
+ position: absolute;
+ bottom:120px;
+ left: 50%;
+ transform:translateX(-50%) ;}
+.thankPosition{
   position: relative;
-  z-index: 2;
-  width: 170px;
-  height: 63px;
-  color: var(--primary-backgroundcolor);
-  background-color: #9eff00;
-  border-radius: 8px;
-  border: none;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 150%;
-  cursor: pointer;
-}
 
+}
 @media screen and (max-width: 1440px) {
+
   .bglogothank {
     width: 60px;
     height: 60px;
@@ -118,10 +129,16 @@
 
 }
 @media screen and (max-width: 992px) {
+.Thank{
+  padding-bottom: 100px;
+}
+.but_start{
+   bottom:60px;
+}
   .bglogothank {
     width: 50px;
     height: 50px;
-    padding: 10px 11.78px;
+    padding: 10px 11.78px ;
 
     img {
       width: 26.67px;
