--- a/src/Components/ContactProject/ContactProject.css
+++ b/src/Components/ContactProject/ContactProject.css
@@ -61,7 +61,7 @@
                 border-radius: 8px;
             }
         }
-        button{
+        a{
             width: 170px;
             height: 63px;
             flex-shrink: 0;
@@ -71,6 +71,10 @@
             background-color: var(--primary-color);
             color: var(--primary-backgroundcolor);
             border: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
         }
 
     }
