--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -65,7 +65,7 @@ body,
 
 .nav-link:hover,
 .nav-link:focus {
-    background-color: var(--writing-color-secondary);
+    background-color: var(--writing-color);
     color: var(--primary-color);
     padding: 14px;
     transition: all 0.5s ease;
@@ -73,7 +73,7 @@ body,
 }
 
 .nav-link:visited {
-    background-color: var(--writing-color-secondary);
+    background-color: var(--writing-color);
     font-weight: 600;
 }
 
